--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-opencv-python = "*"
 face-recognition = "*"
 pyqt5 = "*"
+opencv-python = "==3.*"
 
 [dev-packages]
 
