--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+payroll.db
 # Distribution / packaging
 .Python
 build/
@@ -130,5 +130,6 @@ dmypy.json
 
 known_faces/*
 data/employees/*
+data/temp/*
 unknown_faces/*
 payroll.db
